--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h4 {
   padding-top: 10px;
   padding-bottom: 10px;
   align-items: center;
+  text-align: center;
   justify-content: center;
 }
 
